prevent sidebar horizontal scroll

--- a/css/litewrite.css
+++ b/css/litewrite.css
@@ -37,7 +37,7 @@ aside a, .add {
 	white-space:nowrap; overflow:hidden;
 }
 
-.add { position:relative; display:inline-block; font-weight:normal; color:#999; width:85%; padding:1.5em 1.2em; }
+.add { position:relative; display:inline-block; font-weight:normal; color:#999; width:80%; padding:1.5em 1.2em; }
 .add:hover, .add:focus { color:#000; }
 	.add .add-plus, .add .add-text { position:absolute; -webkit-transition:opacity 200ms; -moz-transition:opacity 200ms; -o-transition:opacity 200ms; transition:opacity 200ms; }
 	.add .add-plus { opacity:1; font-size:160%; top:.51em; } .add:hover .add-plus { opacity:0; }
